Added probability command
Added a command to calculate the probability of an spawning ore with given settings.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,3 +9,6 @@ commands:
   sample:
     description: Generate a sample chunk to visualise
     usage: /<command> [frequency] [minimum] [optimalYMin] [optimalYMax] [yPunishment] [seed]
+  probability:
+    description: Calculate the probability of an ore spawning at a specific Y level given certain parameters.
+    usage: /<command> [frequency] [minimum] [optimalYMin] [optimalYMax] [yPunishment] [yLevel] [sampleSize]
