Optimised packets sent
Significantly reduced the number of packets sent using MULTI_BLOCK_CHANGE instead of BLOCK_CHANGE. This reduces client and server network usage and load.

Now depending on ProtocolLib to send these packets.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,8 @@ main: uk.co.froogo.civores.CivOres
 api-version: 1.16
 prefix: Civ Ores
 authors: [ Froogo ]
+depend:
+  - ProtocolLib
 
 commands:
   sample:
