Removed redundant logic
Removed logic which was made redundant by recent updates.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,7 +10,7 @@ depend:
 commands:
   sample:
     description: Generate a sample chunk to visualise
-    usage: /<command> [frequency] [minimum] [optimalYMin] [optimalYMax] [yPunishment] [seed]
+    usage: /<command> [frequency] [minimum] [optimalYMin] [optimalYMax] [yPunishment]
   probability:
     description: Calculate the probability of an ore spawning at a specific Y level given certain parameters.
     usage: /<command> [frequency] [minimum] [optimalYMin] [optimalYMax] [yPunishment] [yLevel] [sampleSize]
