--- a/pom.xml
+++ b/pom.xml
@@ -86,5 +86,11 @@
             <version>4.6.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
